<resources>
    <string name="app_name">Gray</string>
    <string name="show_more_btn"><u>Voir plus</u></string>
    <string name="payments_list_title">Liste des paiements</string>
    <string name="unpaid_list_title">Liste des impayées</string>
    <string name="activate_btn">Activer la ligne</string>
    <string name="buy_btn">Acheter une\nrecharge</string>
    <string name="renew_btn">Renouveler mon\nforfait</string>
    <string name="phone_string"><u>0801 000 888</u></string>
    <string name="phone_string2"><u>888</u></string>
    <string name="arabic_label">العربية</string>
    <string name="french_label">Français</string>
    <string name="help_label">Assistance</string>
    <string name="cards_bank_label">Mes cartes bancaires</string>

    <string name="mode_payment_label">Mode de paiement</string>
    <string name="card_bank_label">Carte bancaire</string>
    <string name="app_mobile_label">Via l’application mobile bancaire</string>
    <string name="mtcash_label">MT CASH</string>

    <string name="panier_label">Panier</string>
    <string name="payment_mtcash_label">Paiement via MT CASH</string>
    <string name="description_mtcash_label">Votre transaction ne peut pas aboutir Il semblerait qu’aucun compte MTCASH ne soit associé à ce numéro de téléphone. Veuillez saisir un autre numéro ou créer un compte MTCASH</string>
    <string name="num_phone_label">NUMÉRO DE TÉLÉPHONE</string>

    <string name="payment_mobile_label">Paiement via l’application mobile bancaire</string>
    <string name="payment_code_label">Code de paiement</string>
    <string name="date_exp_label">Date d’expiration</string>

    <string name="contracts_label">Mes contrats</string>
    <string name="info_label">Infos personnelles</string>
    <string name="close_label">X</string>
    <string name="bundle_label">Forfait</string>
    <string name="number_label">Numéro</string>
    <string name="date_label">Date de renouvellement</string>
    <string name="total_label">Total</string>
    <string name="show_details"><u>Voir détails</u></string>
    <string name="save_btn_label">Enregistrer</string>
    <string name="available_services_title">Service disponibles</string>
    <string name="affected_services_title">Service affectés</string>
    <string name="pay_btn_text">Payer</string>
    <string name="payments_title">Mes avis de paiements</string>
    <string name="price_text">Prix</string>
    <string name="details_text">Détails</string>
    <string name="status_text">Statut</string>
    <string name="suspend_contract_btn"><u>Suspendre mon contrat</u></string>
    <string name="renew_contract_btn"><u>Renouveler mon contrat</u></string>
    <string name="delete_contract_btn"><u>Résilier mon contrat</u></string>
    <string name="blocked_sim_btn"><u>Carte SIM bloquée ou volée ?</u></string>
    <string name="resend_code_puk_btn"><u>Renvoyer le code PUK</u></string>
    <string name="logout_btn_label">Déconnexion</string>
    <string name="login_btn">Connexion</string>
    <string name="discover_offer_btn_label">Découvrez nos offres</string>
    <string name="forgotten_password_btn">Mot de passe oublié</string>
    <string name="password_hint">Mot de passe</string>
    <string name="address_mail_hint">Adresse mail</string>
    <string name="personal_info_title">Infos personnelles</string>
    <string name="last_name_label">Nom :</string>
    <string name="last_name_hint">Nom</string>
    <string name="first_name_label">Prénom :</string>
    <string name="first_name_hint">Prénom</string>
    <string name="email_label">E-mail :</string>
    <string name="email_hint">Email</string>
    <string name="phone_label">Numéro :</string>
    <string name="phone_hint">Numéro</string>
    <string name="city_label">Ville :</string>
    <string name="city_hint">Ville</string>
    <string name="password_label">Mot de passe :</string>
    <string name="address_label">Adresse :</string>
    <string name="address_hint">Adresse</string>
    <string name="civility_hint">Civilité :</string>
    <string name="women_hint">Mme</string>
    <string name="men_hint">M</string>
    <string name="update_password_title">Changer mot de passe :</string>
    <string name="new_password_title">Nouveau mot de passe :</string>
    <string name="confirm_password_hint">Confirmer mot de passe</string>
    <string name="cancel_btn_label">Annuler</string>
    <string name="forgotten_password_title">Mot de passe oublié ?</string>
    <string name="ok_btn">OK</string>
    <string name="Bundles_title">Mes forfaits</string>
    <string name="mes_forfaits">Forfaits</string>
    <string name="update_bundle_btn_label">changer mon forfait</string>
    <string name="no_hint">Non</string>
    <string name="yes_hint">Oui</string>
    <string name="sim_received_dialog_title">Avez-vous reçu votre\ncarte SIM ?</string>
    <!--    <string name="sim_received_dialog_description">Une fois votre SIM récupérée et afin d’activer votre ligne, vous avez besoin d’activer votre ligne depuis votre espace client</string>-->
    <string name="sim_received_dialog_description">Vous avez besoin d\'activer votre ligne par le scanne de code à barre de la carte</string>
    <string name="logout_discreption">Etes vous sûr de vouloir vous déconnecter ?</string>
    <string name="help_title">Assitance</string>
    <string name="faq_title">FAQ</string>
    <string name="internet_label">Internet</string>
    <string name="postal_code_hint">Code postal</string>
    <string name="postal_code_label">Code postal :</string>
    <string name="confirm_btn_label">Confirmer</string>
    <string name="reason_hint">Saisir un motif</string>
    <string name="contract_code_hint">Saisir le code du contrat</string>
    <!--<string name="resend_btn_label">Renvoyer</string>-->
    <string name="resend_btn_label">Récupérer</string>
    <string name="phone_number_hint">Saisis votre numéro de téléphone</string>
    <string name="suspend_contract_title">Confirmer la suspension de\nmon contrat</string>
    <string name="suspend_contract_message">Si vous confirmez et mettez en suspens votre contrat maintenant, vous pourrez le réinitialiser à tout moment en passant par votre espace client Gray</string>
    <string name="renew_contract_title">Renouveler mon\ncontrat</string>
    <string name="end_contract_title">Confirmer la résiliation de\nmon contrat</string>
    <string name="change_sim_title">Carte SIM bloquée\nou volée</string>
    <!--    <string name="change_sim_message">Pour débloquer votre carte SIM, merci de prendre contact avec notre service client Gray au 777 (Abonnés) / 888 (Jawal)</string>-->
    <string name="change_sim_message">Vous voulez suspendre temporairement votre carte SIM ?</string>
<!--
    <string name="resend_puk_title">Renvoyer le code PUK</string>
-->
    <string name="resend_puk_title">Récupérer code PUK</string>
    <string name="resend_puk_message">Ce service vous permet de récupérer votre code PUK lorsque votre carte SIM est bloquée</string>
    <string name="bundle_menu_item_label">Mon forfait</string>
    <string name="payments_menu_item_label">Mes\npaiements</string>
    <string name="payments_menu_item_label_new">Paiements</string>
    <string name="services_menu_item_label">Mes services</string>
    <string name="services_menu_item_label_new">Services</string>
    <string name="update_bundle_menu_item_label">Modifier\nmon forfait</string>
    <string name="change_password_title">Changer mot de passe :</string>
    <string name="new_password_label">Nouveau mot de passe :</string>
    <string name="contract_name_label">Formule :</string>
    <string name="msisdn_label">N° ligne :</string>
    <string name="client_number_label">Numéro client :</string>
    <string name="activation_date_label">Date activation :</string>
    <string name="commitment_date">Date d’engagement :</string>
    <string name="call_label">Voix</string>
    <string name="end_at">Expire le </string>
    <string name="start_at">Débute le </string>
    <string name="price_unit">DH\n/ mois</string>
    <string name="line_activation_title">Code à insérer afin d’activer\nla ligne</string>
    <string name="code">Code</string>
    <string name="validate_btn_label">Valider</string>
    <string name="end_contract_dialog_description">Si vous confirmez et mettez fin à votre contrat maintenant, vous continuerez d’en bénéficier jusqu’au </string>
    <string name="renew_contract_dialog_description">"Votre nouveau contrat débutera le "</string>
    <string name="to_label">" à "</string>
    <string name="bundle_name_label">\"\nLe forfait Gray sélectionné est de \"</string>
    <string name="dh_label">\" DH\"</string>
    <string name="renew_bundle_description">Êtes vous sûr de vouloir renouveler votre forfait ?</string>
    <string name="buy_recharge_title">Acheter une recharge</string>
    <string name="buy_btn_label">acheter</string>
    <string name="later_btn_label">Plus tard</string>
    <string name="update_btn_label">Mise à jour</string>
    <string name="confirm_recharge_dialog">Vous recevrez un SMS de confirmation de recharge</string>
    <string name="settings_btn_label">Paramétres</string>
    <string name="biometrics_message_description">Vous pourrez utiliser vos informations d\'identification biométriques pour la prochaine authentification.</string>
    <string name="authentification">AUTHENTIFICATION</string>
    <string name="n_cin">N° CIN :</string>
    <string name="anglais_label">Anglais</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>
    <string name="qrcode">QRCODE</string>
    <string name="rooted_message_dialog">Cet appareil est rooté. Vous ne pouvez pas utiliser cette application.</string>
</resources>