<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CCFFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.9">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="20dp"
            android:fontFamily="@font/montserrat_extrabold"
            android:text="@string/sim_received_dialog_title"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/sim_received_dialog_description"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="13sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/yesBtn"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="0.5"
                android:background="@drawable/orange_bg"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/yes_hint"
                android:textColor="@color/white" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/noBtn"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_marginStart="8dp"
                android:layout_weight="0.5"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/no_hint"
                android:textAllCaps="false"
                android:textColor="@color/orange"
                app:strokeColor="@color/orange"
                app:strokeWidth="1dp" />
        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>