<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#AA000000">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.8">

        <TextView
            android:id="@+id/closeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="15dp"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/close_label"
            android:textColor="@color/orange"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:fontFamily="@font/montserrat_extrabold"
            android:text="@string/forgotten_password_title"
            android:textColor="@color/blue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/nunito_semibold"
            android:text="Lorem ipsum dolor sitidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="30dp"
            android:background="@drawable/editext_border"
            android:fontFamily="@font/montserrat_bold"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:textColorHint="@color/black"
            android:textSize="14sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/okBtn"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginHorizontal="70dp"
            android:backgroundTint="#E96614"
            android:fontFamily="@font/montserrat_extrabold"
            android:text="@string/ok_btn"
            android:textAllCaps="true"
            android:textColor="@color/white" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>