<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.authentication.login.LoginFragment">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:fontFamily="@font/montserrat_black"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="60sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/inputsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/image">

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/editext_border"
                android:fontFamily="@font/avenir_book"
                android:hint="@string/address_mail_hint"
                android:inputType="textEmailAddress"
                android:paddingStart="30dp"
                android:textColorHint="@color/lightGrey"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/editext_border"
                android:fontFamily="@font/avenir_book"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:paddingStart="30dp"
                android:textColorHint="@color/lightGrey"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/forgottenPasswordBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:fontFamily="@font/avenir_book"
            android:text="@string/forgotten_password_btn"
            android:textColor="@color/lightGrey"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputsLayout" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="30dp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/forgottenPasswordBtn">

            <ImageView
                android:id="@+id/biometricBtn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:src="@drawable/ic_biome_trique_digital_noir"
                android:visibility="gone" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:backgroundTint="@color/grey1"
                android:enabled="false"
                android:fontFamily="@font/montserrat_extrabold"
                android:text="@string/login_btn"
                android:textColor="@color/white" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/discoverOffersBtn"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:backgroundTint="@color/grey1"
                android:fontFamily="@font/montserrat_extrabold"
                android:text="@string/discover_offer_btn_label" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/loader"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:visibility="gone">

            <pl.droidsonroids.gif.GifImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerInParent="true"
                android:scaleType="fitXY"
                android:src="@mipmap/loader" />
        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
