<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="80dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_extrabold"
                android:text="@string/update_password_title"
                android:textColor="@color/blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/montserrat_semibold"
                android:text="Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo"
                android:textColor="#444342" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/new_password_title"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/newPassword"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/editext_border"
                    android:fontFamily="@font/montserrat_semibold"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:paddingStart="20dp"
                    android:textColorHint="@color/grey8"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/showNewPassword"
                    android:layout_width="40dp"
                    android:layout_height="15dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/eye" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/confirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/editext_border"
                    android:fontFamily="@font/montserrat_semibold"
                    android:hint="@string/confirm_password_hint"
                    android:inputType="textPassword"
                    android:paddingStart="20dp"
                    android:textColorHint="@color/grey8"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/showConfirmedPassword"
                    android:layout_width="40dp"
                    android:layout_height="15dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/eye" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cancelBtn"
                    android:layout_width="0dp"
                    android:layout_height="63dp"
                    android:layout_weight="0.5"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/cancel_btn_label"
                    android:textAllCaps="false"
                    android:textColor="@color/blue"
                    android:textSize="13sp"
                    app:cornerRadius="7dp"
                    app:strokeColor="@color/blue"
                    app:strokeWidth="1dp" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.03" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/saveBtn"
                    android:layout_width="0dp"
                    android:layout_height="63dp"
                    android:layout_weight="0.5"
                    android:backgroundTint="@color/button_background_selector"
                    android:enabled="false"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/save_btn_label"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

            </LinearLayout>
        </LinearLayout>

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/loader"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerInParent="true"
            android:scaleType="fitXY"
            android:src="@mipmap/loader"
            android:visibility="gone" />
    </RelativeLayout>
</layout>
