<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#AA000000">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.9">

        <RelativeLayout
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="end"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/delete_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/closeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:fontFamily="@font/montserrat_bold"
                android:layout_centerInParent="true"
                android:includeFontPadding="false"
                android:text="@string/close_label"
                android:textColor="@color/orange"
                android:textSize="20sp" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/nunito_semibold"
            android:gravity="center"
            android:text="@string/renew_bundle_description"
            android:textColor="#444342"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancelBtn"
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:layout_weight="0.5"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/cancel_btn_label"
                android:textAllCaps="false"
                android:textColor="@color/blue"
                android:textSize="13sp"
                app:cornerRadius="7dp"
                app:strokeColor="@color/blue"
                app:strokeWidth="1dp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.03" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/confirmBtn"
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:layout_weight="0.5"
                android:backgroundTint="@color/button_selector"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/confirm_btn_label"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="13sp" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>